# seed-bank-env

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
environment/: env.py
server/: app.py  requirements.txt
