[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seed-bank-env"
version = "1.0.0"
description = "Seed Bank Curator OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.6.4",
    "openai==2.7.2",
    "requests==2.31.0",
    "openenv-core>=0.2.0",
]



[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["inference", "models", "tasks"]

[tool.setuptools.packages.find]
include = ["environment*", "server*"]
